--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   provider: ^4.0.5
+  intl: ^0.16.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
