--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   provider: ^4.0.5
   intl: ^0.16.1
+  bottom_navy_bar: ^5.6.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
