--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   provider: ^4.0.5
   intl: ^0.16.1
   bottom_navy_bar: ^5.6.0
+  http: ^0.12.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
