--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dev_dependencies:
   intl: ^0.16.1
   bottom_navy_bar: ^5.6.0
   http: ^0.12.1
+  shared_preferences: ^0.5.7+3
+
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
